RTC5impl.hpp


_declspec(dllimport) UINT __stdcall init_rtc5_dll(void);

_declspec(dllimport) void __stdcall free_rtc5_dll(void);

_declspec(dllimport) void __stdcall set_rtc4_mode(void);

_declspec(dllimport) void __stdcall set_rtc5_mode(void);

_declspec(dllimport) UINT __stdcall get_rtc_mode(void);

_declspec(dllimport) UINT __stdcall n_get_error(const UINT CardNo);

_declspec(dllimport) UINT __stdcall n_get_last_error(const UINT CardNo);

_declspec(dllimport) void __stdcall n_reset_error(const UINT CardNo, const UINT Code);

_declspec(dllimport) UINT __stdcall n_set_verify(const UINT CardNo, const UINT Verify);

_declspec(dllimport) UINT __stdcall get_error(void);

_declspec(dllimport) UINT __stdcall get_last_error(void);

_declspec(dllimport) void __stdcall reset_error(const UINT Code);

_declspec(dllimport) UINT __stdcall set_verify(const UINT Verify);

_declspec(dllimport) UINT __stdcall verify_checksum(const char* Name);

_declspec(dllimport) UINT __stdcall rtc5_count_cards(void);

_declspec(dllimport) UINT __stdcall acquire_rtc(const UINT CardNo);

_declspec(dllimport) UINT __stdcall release_rtc(const UINT CardNo);

_declspec(dllimport) UINT __stdcall select_rtc(const UINT CardNo);

_declspec(dllimport) UINT __stdcall get_dll_version(void);

_declspec(dllimport) UINT __stdcall n_get_serial_number(const UINT CardNo);

_declspec(dllimport) UINT __stdcall n_get_hex_version(const UINT CardNo);

_declspec(dllimport) UINT __stdcall n_get_rtc_version(const UINT CardNo);

_declspec(dllimport) UINT __stdcall get_serial_number(void);

_declspec(dllimport) UINT __stdcall get_hex_version(void);

_declspec(dllimport) UINT __stdcall get_rtc_version(void);

_declspec(dllimport) UINT __stdcall n_load_program_file(const UINT CardNo, const char* Path);

_declspec(dllimport) void __stdcall n_sync_slaves(const UINT CardNo);

_declspec(dllimport) UINT __stdcall n_load_correction_file(const UINT CardNo, const char* Name, const UINT No, const UINT Dim);

_declspec(dllimport) UINT __stdcall n_load_z_table(const UINT CardNo, const double A, const double B, const double C);

_declspec(dllimport) void __stdcall n_select_cor_table(const UINT CardNo, const UINT HeadA, const UINT HeadB);

_declspec(dllimport) UINT __stdcall n_set_dsp_mode(const UINT CardNo, const UINT Mode);

_declspec(dllimport) double __stdcall n_get_head_para(const UINT CardNo, const UINT HeadNo, const UINT ParaNo);

_declspec(dllimport) double __stdcall n_get_table_para(const UINT CardNo, const UINT TableNo, const UINT ParaNo);

_declspec(dllimport) UINT __stdcall load_program_file(const char* Path);

_declspec(dllimport) void __stdcall sync_slaves(void);

_declspec(dllimport) UINT __stdcall load_correction_file(const char* Name, const UINT No, const UINT Dim);

_declspec(dllimport) UINT __stdcall load_z_table(const double A, const double B, const double C);

_declspec(dllimport) void __stdcall select_cor_table(const UINT HeadA, const UINT HeadB);

_declspec(dllimport) UINT __stdcall set_dsp_mode(const UINT Mode);

_declspec(dllimport) double __stdcall get_head_para(const UINT HeadNo, const UINT ParaNo);

_declspec(dllimport) double __stdcall get_table_para(const UINT TableNo, const UINT ParaNo);

_declspec(dllimport) void __stdcall n_config_list(const UINT CardNo, const UINT Mem1, const UINT Mem2);

_declspec(dllimport) void __stdcall n_get_config_list(const UINT CardNo);

_declspec(dllimport) UINT __stdcall n_save_disk(const UINT CardNo, const char* Name, const UINT Mode);

_declspec(dllimport) UINT __stdcall n_load_disk(const UINT CardNo, const char* Name, const UINT Mode);

_declspec(dllimport) UINT __stdcall n_get_list_space(const UINT CardNo);

_declspec(dllimport) void __stdcall config_list(const UINT Mem1, const UINT Mem2);

_declspec(dllimport) void __stdcall get_config_list(void);

_declspec(dllimport) UINT __stdcall save_disk(const char* Name, const UINT Mode);

_declspec(dllimport) UINT __stdcall load_disk(const char* Name, const UINT Mode);

_declspec(dllimport) UINT __stdcall get_list_space(void);

_declspec(dllimport) void __stdcall n_set_start_list_pos(const UINT CardNo, const UINT ListNo, const UINT Pos);

_declspec(dllimport) void __stdcall n_set_start_list(const UINT CardNo, const UINT ListNo);

_declspec(dllimport) void __stdcall n_set_start_list_1(const UINT CardNo);

_declspec(dllimport) void __stdcall n_set_start_list_2(const UINT CardNo);

_declspec(dllimport) void __stdcall n_set_input_pointer(const UINT CardNo, const UINT Pos);

_declspec(dllimport) UINT __stdcall n_load_list(const UINT CardNo, const UINT ListNo, const UINT Pos);

_declspec(dllimport) void __stdcall n_load_sub(const UINT CardNo, const UINT Index);

_declspec(dllimport) void __stdcall n_load_char(const UINT CardNo, const UINT Char);

_declspec(dllimport) void __stdcall n_load_text_table(const UINT CardNo, const UINT Index);

_declspec(dllimport) void __stdcall n_get_list_pointer(const UINT CardNo, UINT& ListNo, UINT& Pos);

_declspec(dllimport) UINT __stdcall n_get_input_pointer(const UINT CardNo);

_declspec(dllimport) void __stdcall set_start_list_pos(const UINT ListNo, const UINT Pos);

_declspec(dllimport) void __stdcall set_start_list(const UINT ListNo);

_declspec(dllimport) void __stdcall set_start_list_1(void);

_declspec(dllimport) void __stdcall set_start_list_2(void);

_declspec(dllimport) void __stdcall set_input_pointer(const UINT Pos);

_declspec(dllimport) UINT __stdcall load_list(const UINT ListNo, const UINT Pos);

_declspec(dllimport) void __stdcall load_sub(const UINT Index);

_declspec(dllimport) void __stdcall load_char(const UINT Char);

_declspec(dllimport) void __stdcall load_text_table(const UINT Index);

_declspec(dllimport) void __stdcall get_list_pointer(UINT& ListNo, UINT& Pos);

_declspec(dllimport) UINT __stdcall get_input_pointer(void);

_declspec(dllimport) void __stdcall n_execute_list_pos(const UINT CardNo, const UINT ListNo, const UINT Pos);

_declspec(dllimport) void __stdcall n_execute_at_pointer(const UINT CardNo, const UINT Pos);

_declspec(dllimport) void __stdcall n_execute_list(const UINT CardNo, const UINT ListNo);

_declspec(dllimport) void __stdcall n_execute_list_1(const UINT CardNo);

_declspec(dllimport) void __stdcall n_execute_list_2(const UINT CardNo);

_declspec(dllimport) void __stdcall n_get_out_pointer(const UINT CardNo, UINT& ListNo, UINT& Pos);

_declspec(dllimport) void __stdcall execute_list_pos(const UINT ListNo, const UINT Pos);

_declspec(dllimport) void __stdcall execute_at_pointer(const UINT Pos);

_declspec(dllimport) void __stdcall execute_list(const UINT ListNo);

_declspec(dllimport) void __stdcall execute_list_1(void);

_declspec(dllimport) void __stdcall execute_list_2(void);

_declspec(dllimport) void __stdcall get_out_pointer(UINT& ListNo, UINT& Pos);

_declspec(dllimport) void __stdcall n_auto_change_pos(const UINT CardNo, const UINT Pos);

_declspec(dllimport) void __stdcall n_start_loop(const UINT CardNo);

_declspec(dllimport) void __stdcall n_quit_loop(const UINT CardNo);

_declspec(dllimport) void __stdcall n_pause_list(const UINT CardNo);

_declspec(dllimport) void __stdcall n_restart_list(const UINT CardNo);

_declspec(dllimport) void __stdcall n_release_wait(const UINT CardNo);

_declspec(dllimport) void __stdcall n_stop_execution(const UINT CardNo);

_declspec(dllimport) void __stdcall n_auto_change(const UINT CardNo);

_declspec(dllimport) void __stdcall n_stop_list(const UINT CardNo);

_declspec(dllimport) UINT __stdcall n_get_wait_status(const UINT CardNo);

_declspec(dllimport) UINT __stdcall n_read_status(const UINT CardNo);

_declspec(dllimport) void __stdcall n_get_status(const UINT CardNo, UINT& Status, UINT& Pos);

_declspec(dllimport) void __stdcall auto_change_pos(const UINT Pos);

_declspec(dllimport) void __stdcall start_loop(void);

_declspec(dllimport) void __stdcall quit_loop(void);

_declspec(dllimport) void __stdcall pause_list(void);

_declspec(dllimport) void __stdcall restart_list(void);

_declspec(dllimport) void __stdcall release_wait(void);

_declspec(dllimport) void __stdcall stop_execution(void);

_declspec(dllimport) void __stdcall auto_change(void);

_declspec(dllimport) void __stdcall stop_list(void);

_declspec(dllimport) UINT __stdcall get_wait_status(void);

_declspec(dllimport) UINT __stdcall read_status(void);

_declspec(dllimport) void __stdcall get_status(UINT& Status, UINT& Pos);

_declspec(dllimport) void __stdcall n_set_extstartpos(const UINT CardNo, const UINT Pos);

_declspec(dllimport) void __stdcall n_set_max_counts(const UINT CardNo, const UINT Counts);

_declspec(dllimport) void __stdcall n_set_control_mode(const UINT CardNo, const UINT Mode);

_declspec(dllimport) void __stdcall n_simulate_ext_stop(const UINT CardNo);

_declspec(dllimport) void __stdcall n_simulate_ext_start_ctrl(const UINT CardNo);

_declspec(dllimport) UINT __stdcall n_get_counts(const UINT CardNo);

_declspec(dllimport) UINT __stdcall n_get_startstop_info(const UINT CardNo);

_declspec(dllimport) void __stdcall set_extstartpos(const UINT Pos);

_declspec(dllimport) void __stdcall set_max_counts(const UINT Counts);

_declspec(dllimport) void __stdcall set_control_mode(const UINT Mode);

_declspec(dllimport) void __stdcall simulate_ext_stop(void);

_declspec(dllimport) void __stdcall simulate_ext_start_ctrl(void);

_declspec(dllimport) UINT __stdcall get_counts(void);

_declspec(dllimport) UINT __stdcall get_startstop_info(void);

_declspec(dllimport) void __stdcall n_copy_dst_src(const UINT CardNo, const UINT Dst, const UINT Src, const UINT Mode);

_declspec(dllimport) void __stdcall n_set_char_pointer(const UINT CardNo, const UINT Char, const UINT Pos);

_declspec(dllimport) void __stdcall n_set_sub_pointer(const UINT CardNo, const UINT Index, const UINT Pos);

_declspec(dllimport) void __stdcall n_set_text_table_pointer(const UINT CardNo, const UINT Index, const UINT Pos);

_declspec(dllimport) void __stdcall n_set_char_table(const UINT CardNo, const UINT Index, const UINT Pos);

_declspec(dllimport) UINT __stdcall n_get_char_pointer(const UINT CardNo, const UINT Char);

_declspec(dllimport) UINT __stdcall n_get_sub_pointer(const UINT CardNo, const UINT Index);

_declspec(dllimport) UINT __stdcall n_get_text_table_pointer(const UINT CardNo, const UINT Index);

_declspec(dllimport) void __stdcall copy_dst_src(const UINT Dst, const UINT Src, const UINT Mode);

_declspec(dllimport) void __stdcall set_char_pointer(const UINT Char, const UINT Pos);

_declspec(dllimport) void __stdcall set_sub_pointer(const UINT Index, const UINT Pos);

_declspec(dllimport) void __stdcall set_text_table_pointer(const UINT Index, const UINT Pos);

_declspec(dllimport) void __stdcall set_char_table(const UINT Index, const UINT Pos);

_declspec(dllimport) UINT __stdcall get_char_pointer(const UINT Char);

_declspec(dllimport) UINT __stdcall get_sub_pointer(const UINT Index);

_declspec(dllimport) UINT __stdcall get_text_table_pointer(const UINT Index);

_declspec(dllimport) void __stdcall n_time_update(const UINT CardNo);

_declspec(dllimport) void __stdcall n_set_serial_step(const UINT CardNo, const UINT No, const UINT Step);

_declspec(dllimport) void __stdcall n_set_serial(const UINT CardNo, const UINT No);

_declspec(dllimport) double __stdcall n_get_serial(const UINT CardNo);

_declspec(dllimport) void __stdcall time_update(void);

_declspec(dllimport) void __stdcall set_serial_step(const UINT No, const UINT Step);

_declspec(dllimport) void __stdcall set_serial(const UINT No);

_declspec(dllimport) double __stdcall get_serial(void);