RTC5Import.pas


function  init_rtc5_dll(): LongWord; stdcall; external RTC5DLL;
procedure free_rtc5_dll(); stdcall; external RTC5DLL;
procedure set_rtc4_mode(); stdcall; external RTC5DLL;
procedure set_rtc5_mode(); stdcall; external RTC5DLL;
function  get_rtc_mode(): LongWord; stdcall; external RTC5DLL;
function  n_get_error(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_get_last_error(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
procedure n_reset_error(CardNo: LongWord; Code: LongWord); stdcall; external RTC5DLL;
function  n_set_verify(CardNo: LongWord; Verify: LongWord): LongWord; stdcall; external RTC5DLL;
function  get_error(): LongWord; stdcall; external RTC5DLL;
function  get_last_error(): LongWord; stdcall; external RTC5DLL;
procedure reset_error(Code: LongWord); stdcall; external RTC5DLL;
function  set_verify(Verify: LongWord): LongWord; stdcall; external RTC5DLL;
function  verify_checksum(Name: PChar): LongWord; stdcall; external RTC5DLL;
function  rtc5_count_cards(): LongWord; stdcall; external RTC5DLL;
function  acquire_rtc(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
function  release_rtc(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
function  select_rtc(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
function  get_dll_version(): LongWord; stdcall; external RTC5DLL;
function  n_get_serial_number(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_get_hex_version(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_get_rtc_version(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
function  get_serial_number(): LongWord; stdcall; external RTC5DLL;
function  get_hex_version(): LongWord; stdcall; external RTC5DLL;
function  get_rtc_version(): LongWord; stdcall; external RTC5DLL;
function  n_load_program_file(CardNo: LongWord; Path: PChar): LongWord; stdcall; external RTC5DLL;
procedure n_sync_slaves(CardNo: LongWord); stdcall; external RTC5DLL;
function  n_load_correction_file(CardNo: LongWord; Name: PChar; No: LongWord; Dim: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_load_z_table(CardNo: LongWord; A: Double; B: Double; C: Double): LongWord; stdcall; external RTC5DLL;
procedure n_select_cor_table(CardNo: LongWord; HeadA: LongWord; HeadB: LongWord); stdcall; external RTC5DLL;
function  n_set_dsp_mode(CardNo: LongWord; Mode: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_get_head_para(CardNo: LongWord; HeadNo: LongWord; ParaNo: LongWord): Double; stdcall; external RTC5DLL;
function  n_get_table_para(CardNo: LongWord; TableNo: LongWord; ParaNo: LongWord): Double; stdcall; external RTC5DLL;
function  load_program_file(Path: PChar): LongWord; stdcall; external RTC5DLL;
procedure sync_slaves(); stdcall; external RTC5DLL;
function  load_correction_file(Name: PChar; No: LongWord; Dim: LongWord): LongWord; stdcall; external RTC5DLL;
function  load_z_table(A: Double; B: Double; C: Double): LongWord; stdcall; external RTC5DLL;
procedure select_cor_table(HeadA: LongWord; HeadB: LongWord); stdcall; external RTC5DLL;
function  set_dsp_mode(Mode: LongWord): LongWord; stdcall; external RTC5DLL;
function  get_head_para(HeadNo: LongWord; ParaNo: LongWord): Double; stdcall; external RTC5DLL;
function  get_table_para(TableNo: LongWord; ParaNo: LongWord): Double; stdcall; external RTC5DLL;
procedure n_config_list(CardNo: LongWord; Mem1: LongWord; Mem2: LongWord); stdcall; external RTC5DLL;
procedure n_get_config_list(CardNo: LongWord); stdcall; external RTC5DLL;
function  n_save_disk(CardNo: LongWord; Name: PChar; Mode: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_load_disk(CardNo: LongWord; Name: PChar; Mode: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_get_list_space(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
procedure config_list(Mem1: LongWord; Mem2: LongWord); stdcall; external RTC5DLL;
procedure get_config_list(); stdcall; external RTC5DLL;
function  save_disk(Name: PChar; Mode: LongWord): LongWord; stdcall; external RTC5DLL;
function  load_disk(Name: PChar; Mode: LongWord): LongWord; stdcall; external RTC5DLL;
function  get_list_space(): LongWord; stdcall; external RTC5DLL;
procedure n_set_start_list_pos(CardNo: LongWord; ListNo: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_set_start_list(CardNo: LongWord; ListNo: LongWord); stdcall; external RTC5DLL;
procedure n_set_start_list_1(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_set_start_list_2(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_set_input_pointer(CardNo: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
function  n_load_list(CardNo: LongWord; ListNo: LongWord; Pos: LongWord): LongWord; stdcall; external RTC5DLL;
procedure n_load_sub(CardNo: LongWord; Index: LongWord); stdcall; external RTC5DLL;
procedure n_load_char(CardNo: LongWord; Char: LongWord); stdcall; external RTC5DLL;
procedure n_load_text_table(CardNo: LongWord; Index: LongWord); stdcall; external RTC5DLL;
procedure n_get_list_pointer(CardNo: LongWord; var ListNo: LongWord; var Pos: LongWord); stdcall; external RTC5DLL;
function  n_get_input_pointer(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
procedure set_start_list_pos(ListNo: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure set_start_list(ListNo: LongWord); stdcall; external RTC5DLL;
procedure set_start_list_1(); stdcall; external RTC5DLL;
procedure set_start_list_2(); stdcall; external RTC5DLL;
procedure set_input_pointer(Pos: LongWord); stdcall; external RTC5DLL;
function  load_list(ListNo: LongWord; Pos: LongWord): LongWord; stdcall; external RTC5DLL;
procedure load_sub(Index: LongWord); stdcall; external RTC5DLL;
procedure load_char(Char: LongWord); stdcall; external RTC5DLL;
procedure load_text_table(Index: LongWord); stdcall; external RTC5DLL;
procedure get_list_pointer(var ListNo: LongWord; var Pos: LongWord); stdcall; external RTC5DLL;
function  get_input_pointer(): LongWord; stdcall; external RTC5DLL;
procedure n_execute_list_pos(CardNo: LongWord; ListNo: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_execute_at_pointer(CardNo: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_execute_list(CardNo: LongWord; ListNo: LongWord); stdcall; external RTC5DLL;
procedure n_execute_list_1(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_execute_list_2(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_get_out_pointer(CardNo: LongWord; var ListNo: LongWord; var Pos: LongWord); stdcall; external RTC5DLL;
procedure execute_list_pos(ListNo: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure execute_at_pointer(Pos: LongWord); stdcall; external RTC5DLL;
procedure execute_list(ListNo: LongWord); stdcall; external RTC5DLL;
procedure execute_list_1(); stdcall; external RTC5DLL;
procedure execute_list_2(); stdcall; external RTC5DLL;
procedure get_out_pointer(var ListNo: LongWord; var Pos: LongWord); stdcall; external RTC5DLL;
procedure n_auto_change_pos(CardNo: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_start_loop(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_quit_loop(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_pause_list(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_restart_list(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_release_wait(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_stop_execution(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_auto_change(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_stop_list(CardNo: LongWord); stdcall; external RTC5DLL;
function  n_get_wait_status(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_read_status(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
procedure n_get_status(CardNo: LongWord; var Status: LongWord; var Pos: LongWord); stdcall; external RTC5DLL;
procedure auto_change_pos(Pos: LongWord); stdcall; external RTC5DLL;
procedure start_loop(); stdcall; external RTC5DLL;
procedure quit_loop(); stdcall; external RTC5DLL;
procedure pause_list(); stdcall; external RTC5DLL;
procedure restart_list(); stdcall; external RTC5DLL;
procedure release_wait(); stdcall; external RTC5DLL;
procedure stop_execution(); stdcall; external RTC5DLL;
procedure auto_change(); stdcall; external RTC5DLL;
procedure stop_list(); stdcall; external RTC5DLL;
function  get_wait_status(): LongWord; stdcall; external RTC5DLL;
function  read_status(): LongWord; stdcall; external RTC5DLL;
procedure get_status(var Status: LongWord; var Pos: LongWord); stdcall; external RTC5DLL;
procedure n_set_extstartpos(CardNo: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_set_max_counts(CardNo: LongWord; Counts: LongWord); stdcall; external RTC5DLL;
procedure n_set_control_mode(CardNo: LongWord; Mode: LongWord); stdcall; external RTC5DLL;
procedure n_simulate_ext_stop(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_simulate_ext_start_ctrl(CardNo: LongWord); stdcall; external RTC5DLL;
function  n_get_counts(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_get_startstop_info(CardNo: LongWord): LongWord; stdcall; external RTC5DLL;
procedure set_extstartpos(Pos: LongWord); stdcall; external RTC5DLL;
procedure set_max_counts(Counts: LongWord); stdcall; external RTC5DLL;
procedure set_control_mode(Mode: LongWord); stdcall; external RTC5DLL;
procedure simulate_ext_stop(); stdcall; external RTC5DLL;
procedure simulate_ext_start_ctrl(); stdcall; external RTC5DLL;
function  get_counts(): LongWord; stdcall; external RTC5DLL;
function  get_startstop_info(): LongWord; stdcall; external RTC5DLL;
procedure n_copy_dst_src(CardNo: LongWord; Dst: LongWord; Src: LongWord; Mode: LongWord); stdcall; external RTC5DLL;
procedure n_set_char_pointer(CardNo: LongWord; Char: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_set_sub_pointer(CardNo: LongWord; Index: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_set_text_table_pointer(CardNo: LongWord; Index: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_set_char_table(CardNo: LongWord; Index: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
function  n_get_char_pointer(CardNo: LongWord; Char: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_get_sub_pointer(CardNo: LongWord; Index: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_get_text_table_pointer(CardNo: LongWord; Index: LongWord): LongWord; stdcall; external RTC5DLL;
procedure copy_dst_src(Dst: LongWord; Src: LongWord; Mode: LongWord); stdcall; external RTC5DLL;
procedure set_char_pointer(Char: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure set_sub_pointer(Index: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure set_text_table_pointer(Index: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure set_char_table(Index: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
function  get_char_pointer(Char: LongWord): LongWord; stdcall; external RTC5DLL;
function  get_sub_pointer(Index: LongWord): LongWord; stdcall; external RTC5DLL;
function  get_text_table_pointer(Index: LongWord): LongWord; stdcall; external RTC5DLL;
procedure n_time_update(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_set_serial_step(CardNo: LongWord; No: LongWord; Step: LongWord); stdcall; external RTC5DLL;
procedure n_set_serial(CardNo: LongWord; No: LongWord); stdcall; external RTC5DLL;
function  n_get_serial(CardNo: LongWord): Double; stdcall; external RTC5DLL;
procedure time_update(); stdcall; external RTC5DLL;
procedure set_serial_step(No: LongWord; Step: LongWord); stdcall; external RTC5DLL;
procedure set_serial(No: LongWord); stdcall; external RTC5DLL;
function  get_serial(): Double; stdcall; external RTC5DLL;
